style(tb): fixes dataset row's height on small datasets/repeators

--- a/src/styles/templateBuilder.less
+++ b/src/styles/templateBuilder.less
@@ -554,12 +554,14 @@
   .dataset-name {
     text-align: right;
     background-color: @dataset-bg;
+    white-space: pre;
   }
 
   .repeator-name {
     text-align: right;
     background-color: @repeator-bg;
     height: 24px;
+    white-space: pre;
   }
 
   /* Variables  */
